fixed text alignment issues

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ body {
     text-align:center;
 }
 .Content_Body {
+    text-align:left;
     background-color:white;
     border:1px solid black;
     padding:3px;
